# agent-budget

./: .gitignore  README.md  pyproject.toml
src/agent_budget/: __init__.py  api_server.py  cli.py  engine.py  mcp_server.py  models.py  server.py  service.py  store.py
src/agent_budget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_engine.py  test_models.py  test_service.py  test_store.py  test_v030_features.py  test_v040_features.py
