[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-budget"
version = "0.4.0"
description = "MCP server + CLI for autonomous agents to manage budgets, track income/expenses, cash flow, burn rate, savings goals, and spending rules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nyx Builds", email = "nyx-builds@users.noreply.github.com" }]
keywords = ["budget", "expenses", "mcp", "agent", "spending", "forecasting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-budget = "agent_budget.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_budget"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
